--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -21,7 +21,7 @@
       <% form_tag :controller => 'links', :action => 'new' do %>
         <p>
           <%= label_tag "link", "uri", :name => "Quick submit" %>
-          <%= text_field "link", "uri", :value => "http://", :style => "color: #aaa;", :onclick => "this.value = ''; this.style.color = '#000';" %>
+          <%= text_field "link", "uri", :value => "http://", :style => "color: #aaa;", :onfocus => "this.value = ''; this.style.color = '#000';" %>
           <%= collection_select 'link', 'category_id', @categories, 'id', 'name' %>
           <%= submit_tag "Go" %>
           <%= hidden_field "link", "quick", :value => true %>
